--- a/tail_docker_ps/templates/tail_docker_ps/ps_list.html
+++ b/tail_docker_ps/templates/tail_docker_ps/ps_list.html
@@ -1,26 +1,11 @@
-{% load static %}
+{% extends 'tail_docker_ps/base.html' %}
 
-<html>
-    <head>
-        <title>Django View Results of Docker</title>
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-        <link rel="stylesheet" href="{% static 'css/docker_ps.css' %}">
-    </head>
+{% block content %}
+    <p> CONTAINER_ID <span style="margin-right: 24px;"></span> NAMES </p>
 
-    <body class="docker-ps">
-        <div>
-            <h1><a href="/">Docker ps</a></h1>
-        </div>
+    <!-- Docker で起動中のコンテナを表示する -->>
+    {% for docker_ps in docker_ps_list %}
+        <p><a href="">{{ docker_ps.CONTAINER_ID }} <span style="margin-right: 24px;"></span> {{ docker_ps.NAME }}</a></p>
+    {% endfor %}
 
-        <div class="view-Results">
-            <p> CONTAINER_ID <span style="margin-right: 24px;"></span> NAMES </p>
-            
-            <!-- Docker で起動中のコンテナを表示する -->>
-            {% for docker_ps in docker_ps_list %}
-                <p><a href="">{{ docker_ps.CONTAINER_ID }} <span style="margin-right: 24px;"></span> {{ docker_ps.NAME }}</a></p>
-            {% endfor %}
-            
-        </div>
-    </body>
-</html>
+{% endblock %}
