[update] Add html to show docker and show it as view.

--- a/tail_docker_ps/templates/tail_docker_ps/ps_list.html
+++ b/tail_docker_ps/templates/tail_docker_ps/ps_list.html
@@ -5,6 +5,8 @@
 
     <!-- Docker で起動中のコンテナを表示する -->>
     {% for docker_ps in docker_ps_list %}
+        <!-- コンテナIDを tail_docker_ps\urls.py の　name='logs_detail' があるURL処理に渡し、  -->
+        <!-- 戻り値として docker_logs/<str:container_id>/ を作成し返却する -->
         <p><a href="{% url 'logs_detail' container_id=docker_ps.CONTAINER_ID %}">{{ docker_ps.CONTAINER_ID }} <span style="margin-right: 24px;"></span> {{ docker_ps.NAME }}</a></p>
     {% endfor %}
 
