[update] Added support for displaying logs for each container ID.

--- a/tail_docker_ps/templates/tail_docker_ps/base.html
+++ b/tail_docker_ps/templates/tail_docker_ps/base.html
@@ -6,11 +6,12 @@
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="{% static 'css/docker_ps.css' %}">
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
 
     <body class="docker-ps">
         <div>
-            <h1><a href="/">Docker ps</a></h1>
+            <h1><a href="/">Docker View</a></h1>
         </div>
 
         <div class="view-Results">
