--- a/tail_docker_ps/templates/tail_docker_ps/logs_view.html
+++ b/tail_docker_ps/templates/tail_docker_ps/logs_view.html
@@ -2,10 +2,10 @@
 
 {% block content %}
     <div class="post">
-        <h2>{{ request.resolver_match.kwargs.container_id }}</h2>
         <p>docker logs -f {{ request.resolver_match.kwargs.container_id }}</p>
     </div>
-    <textarea id="console" rows="30" cols="100" readonly></textarea>
+    <!-- rows="30" cols="100"-->>
+    <textarea id="console" style="width:100%;height:620px" readonly></textarea>
     <script>
         $(function() {
           let ES = new EventSource(
@@ -19,4 +19,5 @@
           };
         });
         </script>
+        
 {% endblock %}
