[fix] 'bytes' is stacked and output.

--- a/tail_docker_ps/templates/tail_docker_ps/logs_view.html
+++ b/tail_docker_ps/templates/tail_docker_ps/logs_view.html
@@ -1,7 +1,7 @@
 {% extends 'tail_docker_ps/base.html' %}
 
 {% block content %}
-    <div class="post">
+    <div class="docker-ps-list">
         <p>docker logs -f {{ request.resolver_match.kwargs.container_id }}</p>
     </div>
     <!-- rows="30" cols="100"-->>
