--- a/tail_docker_ps/templates/tail_docker_ps/base.html
+++ b/tail_docker_ps/templates/tail_docker_ps/base.html
@@ -9,16 +9,15 @@
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
 
-    <body class="docker-ps">
-        <div>
-            <h1><a href="/">Docker View</a></h1>
-        </div>
+    <div class="docker-ps">
+        <h1><a href="/">Docker View</a></h1>
+        <h1><a href="/docker_ps_all/">-a (オプション表示)</a></h1>
+    </div>
 
-        <div class="view-Results">
-            {% block content %}
-            {% endblock %}
-        </div>
 
-        
-    </body>
+    <div class="view-Results">
+        {% block content %}
+        {% endblock %}
+    </div>
+
 </html>
