[refactor] Implemented the option switching by query parameter.

--- a/tail_docker_ps/templates/tail_docker_ps/base.html
+++ b/tail_docker_ps/templates/tail_docker_ps/base.html
@@ -13,7 +13,7 @@
 
         <div class="docker-ps">
             <h1><a href="/">Docker View</a></h1>
-            <h1><a href="/docker_ps_all/">-a (オプション表示)</a></h1>
+            <h1><a href="/?a=1">-a (オプション表示)</a></h1>
         </div>
 
         <div class="view-Results">
