[refactor] Refactor all actions to be controlled by query parameters.

--- a/tail_docker_ps/templates/tail_docker_ps/ps_list.html
+++ b/tail_docker_ps/templates/tail_docker_ps/ps_list.html
@@ -2,13 +2,6 @@
 
 {% block content %}
 <table class="layout-table01">
-    <colgroup span='1' class="container_id"></colgroup>
-    <colgroup span='2' class="container_image"></colgroup>
-    <colgroup span='3' class="container_command"></colgroup>
-    <colgroup span='4' class="container_created"></colgroup>
-    <colgroup span='5' class="container_status"></colgroup>
-    <colgroup span='6' class="container_ports"></colgroup>
-    <colgroup span='7' class="container_names"></colgroup>
 
     <tr>
         <td><p><samp>CONTAINER ID</samp></p></td>
@@ -22,10 +15,10 @@
 
     
     <!-- Docker で起動中のコンテナを表示する -->
-    {% for docker_ps in docker_ps_list %}
+    {% for docker_ps in docker_ps_list %} 
         <tr>
             <!-- <samp> を用いることで idの表示を揃えている -->
-            <td><a href="{% url 'index' container_id=docker_ps.CONTAINER_ID %}" rel="noopener noreferrer"><samp>{{ docker_ps.CONTAINER_ID }}</samp></a></td>
+            <td><a href="/?id={{ docker_ps.CONTAINER_ID }}" rel="noopener noreferrer"><samp>{{ docker_ps.CONTAINER_ID }}</samp></a></td>
             <td>{{ docker_ps.IMAGE }}</td>
             <td>"{{ docker_ps.COMMAND }}"</td>
             <td>{{ docker_ps.CREATED }}</td>
@@ -33,7 +26,7 @@
             <td>{{ docker_ps.PORT }}</td>
             <!-- コンテナIDを tail_docker_ps\urls.py の　name='logs_detail' があるURL処理に渡し、  -->
             <!-- 戻り値として docker_logs/<str:container_id>/ を作成し返却する -->
-            <td><a href="{% url 'index' container_id=docker_ps.CONTAINER_ID %}" rel="noopener noreferrer">{{ docker_ps.NAME }}</a></td>
+            <td><a href="/?id={{ docker_ps.CONTAINER_ID }}" rel="noopener noreferrer">{{ docker_ps.NAME }}</a></td>
         </tr>
     {% endfor %}
     
