--- a/tail_docker_ps/templates/tail_docker_ps/logs_view.html
+++ b/tail_docker_ps/templates/tail_docker_ps/logs_view.html
@@ -3,14 +3,14 @@
 {% block content %}
 
 <div class="docker-ps-list">
-    <p>docker logs -f {{ request.resolver_match.kwargs.container_id }}</p>
+    <p>docker logs -f </p>
 </div>
 <!-- rows="30" cols="100"-->
 <textarea id="console" style="width:100%;height:75%" readonly></textarea>
 <script>
     $(function() {
       let ES = new EventSource(
-        "{% url 'logs_detail' request.resolver_match.kwargs.container_id %}"
+        "{% url 'logs_detail' container_id %}"
       );
       ES.onmessage = function(e) {
         $('#console').append(`${e.data}\n`);
