[feat] Modified to allow tail values to be specified in query parameters, since we want to realize operations with query parameters.

--- a/tail_docker_ps/templates/tail_docker_ps/logs_view.html
+++ b/tail_docker_ps/templates/tail_docker_ps/logs_view.html
@@ -10,7 +10,7 @@
 <script>
     $(function() {
       let ES = new EventSource(
-        "{% url 'logs_detail' container_id %}"
+        "{% url 'logs_detail' container_id %}?tail={{ request.GET.tail }}"
       );
       ES.onmessage = function(e) {
         $('#console').append(`${e.data}\n`);
