--- a/tail_docker_ps/templates/tail_docker_ps/base.html
+++ b/tail_docker_ps/templates/tail_docker_ps/base.html
@@ -12,8 +12,7 @@
     <body>
 
         <div class="docker-ps">
-            <h1><a href="/">Docker View</a></h1>
-            <h1><a href="/?a=1">-a (オプション表示)</a></h1>
+            <h1><a href="/?a=0">Docker View</a></h1>
         </div>
 
         <div class="view-Results">
