--- a/tail_docker_ps/templates/tail_docker_ps/logs_view.html
+++ b/tail_docker_ps/templates/tail_docker_ps/logs_view.html
@@ -6,14 +6,18 @@
 
   <tr>
       <td><p><samp>CONTAINER ID</samp></p></td>
-      <td><p>NAMES</p></td>
+      <td><p>IMAGE</p></td>
+      <td><p>NAME</p></td>
+      <td><p>PORT</p></td>
       <td><p>tail</p></td>
   </tr>
   <!-- コンテナ詳細を表示する -->
   
   <tr>
       <td>{{ CONTAINER_ID }}</td>
+      <td>{{ IMAGE }}</td>
       <td>{{ NAME }}</td>
+      <td>{{ PORT }}</td>
       <td>{{ tail }}</td>
   </tr>
   
