[feat] Added a drop-down to select the tail value.

--- a/tail_docker_ps/templates/tail_docker_ps/logs_view.html
+++ b/tail_docker_ps/templates/tail_docker_ps/logs_view.html
@@ -18,7 +18,19 @@
       <td>{{ IMAGE }}</td>
       <td>{{ NAME }}</td>
       <td>{{ PORT }}</td>
-      <td>{{ tail }}</td>
+      <td><form action="" method="get">
+        <select name="tail">
+          <option value="">--{{ tail }}--</option>
+          <option value="1">1</option>
+          <option value="5">5</option>
+          <option value="10">10</option>
+          <option value="20">20</option>
+          <option value="30">30</option>
+          <option value="40">40</option>
+          <option value="50">50</option>
+          <option value="100">100</option>
+          <option value="150">150</option>
+        </select><input type="submit" value="送信"></form></td>
   </tr>
   
 
