--- a/tail_docker_ps/templates/tail_docker_ps/logs_view.html
+++ b/tail_docker_ps/templates/tail_docker_ps/logs_view.html
@@ -30,7 +30,7 @@
           <option value="50">50</option>
           <option value="100">100</option>
           <option value="150">150</option>
-        </select><input type="submit" value="送信"></form></td>
+        </select><input type="submit" value="更新" class="button"></form></td>
   </tr>
   
 
