[feat] The tail value drop-down selection has been fixed because there were some unnatural values.

--- a/tail_docker_ps/templates/tail_docker_ps/logs_view.html
+++ b/tail_docker_ps/templates/tail_docker_ps/logs_view.html
@@ -20,7 +20,7 @@
       <td>{{ PORT }}</td>
       <td><form action="" method="get">
         <select name="tail">
-          <option value="">--{{ tail }}--</option>
+          <option value= {{ tail }} >--{{ tail }}--</option>
           <option value="1">1</option>
           <option value="5">5</option>
           <option value="10">10</option>
